--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        <script src="https://kit.fontawesome.com/431e2fbafa.js" crossorigin="anonymous"></script>
+        script(src="https://kit.fontawesome.com/431e2fbafa.js" crossorigin="anonymous")
         title #{pageTitle} | #{siteName}
         link(rel="stylesheet", href="/static/styles.css")
     body
