--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -9,7 +9,7 @@ header.header
         .header__column
             //- middleware에서 전역변수로 설정했기 때문에 routes 사용가능
             ul
-                if !user.isAuthenticated
+                if !user
                     li
                         a(href=routes.join) Join
                     li
