--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -9,7 +9,7 @@ header.header
         .header__column
             //- middleware에서 전역변수로 설정했기 때문에 routes 사용가능
             ul
-                if !user
+                if !loggedUser
                     li
                         a(href=routes.join) Join
                     li
@@ -18,6 +18,6 @@ header.header
                     li
                         a(href=`/videos${routes.upload}`) Upload
                     li
-                        a(href=routes.userDetail(user.id)) Profile
+                        a(href=routes.me) Profile
                     li
                         a(href=routes.logout) Log Out
